# android-tree-sitter

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dingyi/tree_sitter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ai_serenade_treesitter_Languages.cc  ai_serenade_treesitter_Languages.h  ai_serenade_treesitter_TreeSitter.cc  ai_serenade_treesitter_TreeSitter.h
app/src/main/java/com/dingyi/tree_sitter/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dingyi/tree_sitter/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
